@@ -1,3 +1,7 @@
+2014-03-01  Michael Schwendt  <mschwendt@users.sf.net>
+
+	* src/main.c: update for changed tuple_set_*() number of arguments
+
 2013-09-24  Michael Schwendt  <mschwendt@users.sf.net>
 
 	* configure.ac, src/main.c, src/plugin.c: port to
